k8s/server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openshift-server
  labels:
    app: openshift-server
    sandbox: chelsea-angelena-dev
    chelsea-angelena-dev: openshift-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-server
  template:
    metadata:
      labels:
        app: openshift-server
    spec:
      containers:
      - name: openshift-server
        image: $TAGGED_SERVER_IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          protocol: TCP
