k8s/server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openshift-server
  labels:
    app: openshift-server
    sandbox: chelsea-angelena-dev
    chelsea-angelena-dev: openshift-server
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: openshift-server
  sessionAffinity: None
  type: ClusterIP
